<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_note"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_gravity="center"
        android:padding="40dp"
        />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="50dp"
        android:layout_gravity="center">


        <Button
            android:id="@+id/alcButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_alc"
            android:layout_gravity="center"
            android:onClick="aboutAlc"
            android:layout_marginTop="50dp"
            android:textColor="#fff"
            android:background="@color/colorPrimary"
            />

        <Button
            android:id="@+id/profileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="myProfile"
            android:text="@string/my_profile"
            android:background="@color/colorPrimary"
            android:textColor="#fff"
            android:layout_marginTop="100dp"/>


    </LinearLayout>


</LinearLayout>